@@ -10,6 +10,8 @@ Version 1.2.0, xxxx, 2013 -- Release 1.2
   the unit tests.
 - Updated buildingspy.development.unittest to allow testing
   of other libraries than the Buildings library.
+- Updated buildingspy.development.unittest to include
+  a model check in the pedantic mode of Dymola.
 
 
 Version 1.1.2, January 8, 2013 -- Release 1.1
